--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "networkx>=3.2.1",
     "fsspec==2025.2.0",
     "certifi==2025.1.31",
+    "tenacity>=8.2.3",  # For retry logic
 ]
 requires-python = ">=3.9"
 
